deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-deployment
  namespace: nexus
  labels:
    app: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      initContainers:
        - name: chown-nexusdata-owner-to-nexus
          image: busybox:1.33.1
          command: ['chown', '-R', '200:200', '/blobs']
          volumeMounts:
            - name: gce-disk-storage
              mountPath: /blobs
      containers:
        - name: nxrm-pod
          image: sonatype/nexus3:3.40.0
          securityContext:
            runAsUser: 200
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          env:
            - name: DB_NAME
              value: ""
            - name: DB_USER
              value: ""
            - name: DB_PASSWORD
              value: ""
            - name: NEXUS_SECURITY_RANDOMPASSWORD
              value: "false"
            - name: NEXUS_SEARCH_INDEX_REBUILD_ON_STARTUP
              value: "true"
            - name: INSTALL4J_ADD_VM_PARAMS
              value: "-Xms2703m -Xmx4g -XX:MaxDirectMemorySize=6g \
          -Dnexus.datastore.enabled=true \
          -Dnexus.datastore.nexus.name=nexus \
          -Dnexus.datastore.nexus.type=jdbc \
          -Dnexus.datastore.nexus.jdbcUrl=jdbc:postgresql://IP/NAME_OF_DB \
          -Dnexus.datastore.nexus.username=postgres \ 
          -Dnexus.datastore.nexus.password=123"
          volumeMounts:
            - name: gce-disk-storage
              mountPath: /blobs
      volumes:
        - name: gce-disk-storage
          persistentVolumeClaim:
            claimName: gce-pd
