ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nexus
  name: ingress-nexus
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: nexus
  labels:
    app: nexus
spec:
  type: NodePort
  selector:
    app: nexus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
